--- a/catalog-service.yaml
+++ b/catalog-service.yaml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the catalog from the config server-default profile"
+  greeting: "Welcome to the catalog from the config server-default profile-hot reload"
